sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:19: error: '(' expected but '}' found.
	}while(!inverse)
        ^